# omni-atlan-metadata

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  INTEGRATION_APPROACH.md  PLAN.md  README.md  generate_atlan_output.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  activities.py  client.py  handler.py  transformer.py  typedefs.py  workflow.py
app/frontend/: workflow.json
frontend/static/: index.html
omni_atlan/: __init__.py  config.py  meta_model_mapper.py  metadata_extractor.py  omni_client.py  output_formatter.py  worker.py  workflows.py
output/: asset_profile_spec.json  lineage_spec.json  meta_model_spec.json  omni_metadata_full.json
scripts/: e2e_test.sh  inspect_dryrun.py
tests/: test_activities.py  test_client.py  test_transformer.py
